syntax = "proto3";

package runtime;

service Runtime {
    // Submit a transaction to leader.
    rpc SubmitTx (SubmitTxRequest) returns (SubmitTxResponse) {}
}

message SubmitTxRequest {
    // Encoded transaction.
    bytes data = 1;
}

message SubmitTxResponse {
}
